Add ESP32-S3 folder. Improve readmes and gitignore

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "esp32-2mb/components/mruby_component/mruby"]
 	path = esp32-2mb/components/mruby_component/mruby
 	url = https://github.com/mruby/mruby.git
+[submodule "esp32s3-2mb/components/mruby_component/mruby"]
+	path = esp32s3-2mb/components/mruby_component/mruby
+	url = https://github.com/mruby/mruby.git
