Switch all variants to littlefs for storage

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,12 @@
 [submodule "esp32s2-2mb/components/mruby_component/mruby"]
 	path = esp32s2-2mb/components/mruby_component/mruby
 	url = https://github.com/denko-rb/mruby.git
+[submodule "esp32-2mb/components/esp_littlefs"]
+	path = esp32-2mb/components/esp_littlefs
+	url = https://github.com/joltwallet/esp_littlefs.git
+[submodule "esp32s2-2mb/components/esp_littlefs"]
+	path = esp32s2-2mb/components/esp_littlefs
+	url = https://github.com/joltwallet/esp_littlefs.git
+[submodule "esp32s3-2mb/components/esp_littlefs"]
+	path = esp32s3-2mb/components/esp_littlefs
+	url = https://github.com/joltwallet/esp_littlefs.git
