--- a/esp32-2mb/main/CMakeLists.txt
+++ b/esp32-2mb/main/CMakeLists.txt
@@ -2,7 +2,7 @@ idf_component_register(
   SRCS mruby_main.c
   INCLUDE_DIRS .
   REQUIRES mruby_component
-  PRIV_REQUIRES nvs_flash spiffs
+  PRIV_REQUIRES nvs_flash esp_littlefs
 )
 
-spiffs_create_partition_image(storage ./spiffs FLASH_IN_PROJECT)
+littlefs_create_partition_image(storage ./storage FLASH_IN_PROJECT)
