--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "ext/mruby"]
-	path = ext/mruby
-	url = https://github.com/denko-rb/mruby.git
-[submodule "ext/esp_littlefs"]
-	path = ext/esp_littlefs
+[submodule "components/esp_littlefs"]
+	path = components/esp_littlefs
 	url = https://github.com/joltwallet/esp_littlefs.git
+[submodule "components/mruby_component/mruby"]
+	path = components/mruby_component/mruby
+	url = https://github.com/denko-rb/mruby.git
