--- a/components/mruby_component/CMakeLists.txt
+++ b/components/mruby_component/CMakeLists.txt
@@ -3,7 +3,15 @@ set(LIBMRUBY_FILE "${COMPONENT_DIR}/mruby/build/esp32/lib/libmruby.a")
 set(MRUBY_CONFIG ${COMPONENT_DIR}/esp32_build_config.rb)
 
 idf_component_register(
-  INCLUDE_DIRS mruby/include
+  SRCS
+    ${COMPONENT_DIR}/picoruby/mrbgems/picoruby-gpio/ports/esp32/gpio.c
+    ${COMPONENT_DIR}/picoruby/mrbgems/picoruby-adc/ports/esp32/adc.c
+    ${COMPONENT_DIR}/picoruby/mrbgems/picoruby-spi/ports/esp32/spi.c
+    ${COMPONENT_DIR}/picoruby/mrbgems/picoruby-pwm/ports/esp32/pwm.c
+    ${COMPONENT_DIR}/picoruby/mrbgems/picoruby-i2c/ports/esp32/i2c.c
+  INCLUDE_DIRS
+    ${COMPONENT_DIR}/include
+    ${COMPONENT_DIR}/mruby/include
   REQUIRES
     esp_hw_support
     esp_rom
@@ -15,6 +23,12 @@ idf_component_register(
     esp_adc
     esp_driver_i2c
     esp_driver_spi
+)
+
+add_definitions(
+  -DPICORB_VM_MRUBY
+  -DPICORUBY_PORT_ESP32
+  -DMRBC_USE_FLOAT
 )
 
 add_custom_command(
@@ -43,6 +57,7 @@ add_prebuilt_library(
     esp_driver_i2c
     esp_driver_spi
 )
+target_link_libraries(libmruby INTERFACE ${COMPONENT_LIB})
 target_link_libraries(${COMPONENT_LIB} INTERFACE libmruby)
 
 add_custom_target(mruby DEPENDS ${LIBMRUBY_FILE})
