--- a/.gitmodules
+++ b/.gitmodules
@@ -10,7 +10,6 @@
 	path = components/mruby_component/picoruby
 	url = https://github.com/picoruby/picoruby.git
 	fetchRecurseSubmodules = true
-[submodule "components/mruby_component/mrbgems/mruby-denko-esp32"]
-	path = mruby-denko-esp32
-	url = https://github.com/denko-rb/mruby-denko-esp32.git
-	fetchrecurseSubmodules = true
+[submodule "components/mruby_component/mrbgems/mruby-denko-esp32/lib/denko"]
+	path = components/mruby_component/mrbgems/mruby-denko-esp32/lib/denko
+	url = https://github.com/denko-rb/denko.git
